# piloting_grcs

./: .clang-format  CMakeLists.txt  LICENSE.txt  README.md  changelog.txt  contributors.txt  package.xml  plugin_description.xml
data/: CMakeLists.txt  valgrind.supp
data/meshes/: landing-base-mesh.dae
data/styles/: blackGradient.qss  darkDefault.qss  darkgreenGradient.qss  darkredGradient.qss  greenGradient.qss  indoor_style.qss  orangeGradient.qss  outdoor_style.qss  redGradient.qss  yellowGradient.qss
data/xml/: piloting.xml
src/: CMakeLists.txt  images.qrc
src/common/: CMakeLists.txt  LoggingManager.cpp  LoggingManager.h  LoggingQueue.cpp  LoggingQueue.h
src/common/QuaZip/: JlCompress.cpp  JlCompress.h  crypt.h  ioapi.h  qioapi.cpp  quazip.cpp  quazip.h  quazip_global.h  quazipfile.cpp  quazipfile.h  quazipfileinfo.cpp  quazipfileinfo.h  quazipnewinfo.cpp  quazipnewinfo.h  unzip.h  zip.c  zip.h
src/communications/: CMakeLists.txt  ICommunications.h
src/communications/DDHL/: DDHLComms.cpp  DDHLComms.h  HttpRequestInput.cpp  HttpRequestInput.h  HttpRequestWorker.cpp  HttpRequestWorker.h  JSon2DTO.cpp  JSon2DTO.h  JSonKeys.cpp  JSonKeys.h  RestApiClient.cpp  RestApiClient.h
src/communications/MavSDK/: MavTypes.h  MavsdkComms.cpp  MavsdkComms.h
src/communications/MavSDK/dtos/: AlarmItemDTO.h  AlarmListDTO.h  AlarmStatusDTO.h  CheckListDTO.h  CheckListItemDTO.h  CommandBasicDTO.h  CommandLongDTO.h  CurrentInspItemDTO.h  HLActionItemDTO.h  HLActionListDTO.h  ParamDTO.h  ReachedInspItemDTO.h  SupportedCommandListDTO.h
src/core/: CMakeLists.txt  Core.cpp  Core.h
src/core/actions/: ActionFactory.cpp  ActionFactory.h  BasicAction.cpp  BasicAction.h
src/core/actions/comms/: CommsConnectAction.cpp  CommsConnectAction.h  CommsDisconnectAction.cpp  CommsDisconnectAction.h  DownloadAlarmsListAction.cpp  DownloadAlarmsListAction.h  DownloadCheckListAction.cpp  DownloadCheckListAction.h  DownloadHLActionsAction.cpp  DownloadHLActionsAction.h  DownloadWaypointsListAction.cpp  DownloadWaypointsListAction.h  ReceiveAlarmListAction.cpp  ReceiveAlarmListAction.h  ReceiveCheckListAction.cpp  ReceiveCheckListAction.h  ReceiveHLActionsAction.cpp  ReceiveHLActionsAction.h  RemoveLoadedHomeAction.cpp  RemoveLoadedHomeAction.h  RemoveLoadedRouteAction.cpp  RemoveLoadedRouteAction.h  SendCommandAction.cpp  SendCommandAction.h  SendHomeAction.cpp  SendHomeAction.h  SetCurrentWaypointItemAction.cpp  SetCurrentWaypointItemAction.h  UpdateAlarmStatusAction.cpp  UpdateAlarmStatusAction.h  UpdateCheckListAction.cpp  UpdateCheckListAction.h  UpdateCommsProgressAction.cpp  UpdateCommsProgressAction.h  UpdateCommsStatusAction.cpp  UpdateCommsStatusAction.h  UpdateCurrentInspItemAction.cpp  UpdateCurrentInspItemAction.h  UpdateLoadedHomeAction.cpp  UpdateLoadedHomeAction.h  (+12 more)
src/core/actions/commsDDHL/: CancelAssetDownloadAction.cpp  CancelAssetDownloadAction.h  DownloadAssetFromDDHLAction.cpp  DownloadAssetFromDDHLAction.h  DownloadInspPlanFromDDHLAction.cpp  DownloadInspPlanFromDDHLAction.h  DownloadSiteListFromDDHLAction.cpp  DownloadSiteListFromDDHLAction.h  LoadCurrentInspectionPlanAction.cpp  LoadCurrentInspectionPlanAction.h  LoadInspectionPlanFromLocalAction.cpp  LoadInspectionPlanFromLocalAction.h  UpdateAssetPathAction.cpp  UpdateAssetPathAction.h  UpdateAssetProgressAction.cpp  UpdateAssetProgressAction.h  UpdateInspectionPlanAction.cpp  UpdateInspectionPlanAction.h  UpdateSiteListAction.cpp  UpdateSiteListAction.h  UploadMissionResultListToDDHLAction.cpp  UploadMissionResultListToDDHLAction.h
src/core/actions/gui/: ChangeApplicationStatusAction.cpp  ChangeApplicationStatusAction.h  ChangeEditionModeAction.cpp  ChangeEditionModeAction.h  ChangeRouteOptionsAction.cpp  ChangeRouteOptionsAction.h  ChangeViewModeAction.cpp  ChangeViewModeAction.h  LoadXmlDataFromFolderAction.cpp  LoadXmlDataFromFolderAction.h  ShowDialogAction.cpp  ShowDialogAction.h  UpdateCommsLinkDDHLAction.cpp  (+9 more)
src/core/dtos/: BasicBoolDTO.h  BasicFloatDTO.h  BasicIntDTO.h  BasicRouteDTO.h  BasicStringDTO.h  BasicStringListDTO.h
src/core/managers/: ActionManager.cpp  ActionManager.h  IActionManager.h
src/dataModel/: CMakeLists.txt  DataModel.cpp  DataModel.h
src/dataModel/business/: ApplicationStatusBusiness.cpp  ApplicationStatusBusiness.h  AssetBusiness.cpp  AssetBusiness.h  CurrentMissionResultBusiness.cpp  CurrentMissionResultBusiness.h  EditionModeBusiness.cpp  EditionModeBusiness.h  HomeBusiness.cpp  HomeBusiness.h  InspectionPlanBusiness.cpp  InspectionPlanBusiness.h  JsonCheckKeys.cpp  JsonCheckKeys.h  JsonWaypointListFile.cpp  JsonWaypointListFile.h  MissionBusiness.cpp  MissionBusiness.h  MissionResultsBusiness.cpp  MissionResultsBusiness.h  MissionStatusBusiness.cpp  MissionStatusBusiness.h  RouteBusiness.cpp  RouteBusiness.h  RouteOptionsBusiness.cpp  RouteOptionsBusiness.h  ViewModeBusiness.cpp  ViewModeBusiness.h  XmlDataBusiness.cpp  XmlDataBusiness.h
src/dataModel/dtos/: ApplicationStatusDTO.h  AssetDTO.h  AssetProgressDTO.h  BasicInfoDTO.h  BasicMissionDTO.h  BatteryParametersDTO.h  CloudDimensionsDTO.h  CloudEditionParametersDTO.h  CommsLinkDDHLDTO.h  CommsLinkDTO.h  CommsLinkMavsdkDTO.h  CommsProgressDTO.h  CommsStatusDTO.h  CurrentMissionResultDTO.h  CurrentWaypointDTO.h  CursorPositionDTO.h  DialogDTO.h  DownloadedFileListDTO.h  EditionModeDTO.h  FileDTO.h  HomeDTO.h  InspectionPlanDTO.h  InspectionTaskDTO.h  InspectionTypeDTO.h  MeasureDTO.h  MissionDTO.h  MissionResultDTO.h  MissionResultsDTO.h  MissionStatusDTO.h  MissionTaskDTO.h  MsgConsoleDTO.h  MsgConsolePopupDTO.h  RouteOptionsDTO.h  SiteDTO.h  SiteListDTO.h  SiteTypeDTO.h  ViewModeDTO.h  VisualizationConfigDTO.h
src/gui/: CMakeLists.txt  MainWindowUi.cpp  MainWindowUi.h  MainWindowUi.ui
src/gui/dtos/: GuiDTO.h
src/maps/: CMakeLists.txt  CircularContainer.h  IMap.h  Map3d.cpp  Map3d.h
src/maps/cloud_tools/: AssetParserThread.cpp  AssetParserThread.h  CloudEditionWorker.h  MeshSampling.h
src/maps/dtos/: Map3dDTO.h
src/maps/items/: Waypoint3dItem.h
utils/: CMakeLists.txt  MainProgram.cpp  MainProgram.h  main.cpp
(+204 files in other folders)
