<?xml version="1.0"?>
<package format="2">

   <name>piloting_grcs</name>
   <version>1.1.0</version>
   <description>The piloting_grcs package</description>

   <maintainer email="mmontes@catec.aero">Marco A. Montes Grova</maintainer>

   <license>MIT</license>

   <buildtool_depend>catkin</buildtool_depend>

   <depend>roscpp</depend>
   <depend>rviz</depend>
   <depend>pcl_ros</depend>
   <depend>geometry_msgs</depend>
   <depend>sensor_msgs</depend>

   <export>
      <rviz plugin="${prefix}/plugin_description.xml"/>
   </export>

</package>
