FILE(GLOB_RECURSE DATA_IMAGES "*.png" "*.jpg" "*.svg" "*.dae" "*.xml")

INSTALL(DIRECTORY icons
   DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}/data)

INSTALL(DIRECTORY meshes
   DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}/data)

INSTALL(DIRECTORY styles
   DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}/data)

INSTALL(DIRECTORY svg
   DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}/data)

INSTALL(DIRECTORY xml
   DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}/data)
