GET_FILENAME_COMPONENT(LIB ${CMAKE_CURRENT_SOURCE_DIR} NAME_WE)

FILE(GLOB_RECURSE SRCS  "*.c*")
FILE(GLOB_RECURSE HDRS  "*.h*")

ADD_LIBRARY(${PROJECT_NAME}_${LIB}  ${SRCS} ${HDRS})

SET_TARGET_PROPERTIES(${PROJECT_NAME}_${LIB} PROPERTIES
   VERSION              ${VERSION}
   SOVERSION            ${SOVERSION}
   CLEAN_DIRECT_OUTPUT  1
   OUTPUT_NAME          "${PROJECT_NAME}_${LIB}")

generate_export_header(${PROJECT_NAME}_${LIB}
   EXPORT_FILE_NAME "${PROJECT_BINARY_DIR}/gcs_${LIB}_export.h")

TARGET_LINK_LIBRARIES(${PROJECT_NAME}_${LIB}
   ${PROJECT_NAME}_common
   ${PROJECT_NAME}_gui
   Qt5::Network
   Qt5::Widgets
   Qt5::Concurrent
   ${MAVSDK_LIBRARIES})

install(TARGETS ${PROJECT_NAME}_${LIB}
   ARCHIVE DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
   LIBRARY DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
   RUNTIME DESTINATION ${CATKIN_GLOBAL_BIN_DESTINATION}
)

SET(LIB_COMPONENTS   ${LIB_COMPONENTS} ${LIB})
SET(LIB_COMPONENTS   ${LIB_COMPONENTS} PARENT_SCOPE)
