GET_FILENAME_COMPONENT(LIB ${CMAKE_CURRENT_SOURCE_DIR} NAME_WE)

FILE(GLOB_RECURSE INCS  "${PROJECT_SOURCE_DIR}/include/${LIB}/*.h")
FILE(GLOB_RECURSE SRCS  "*.cpp")
FILE(GLOB_RECURSE HDRS  "*.h")

ADD_LIBRARY(${PROJECT_NAME}_${LIB}  ${SRCS} ${HDRS} ${INCS})

SET_TARGET_PROPERTIES(${PROJECT_NAME}_${LIB} PROPERTIES
   VERSION              ${VERSION}
   SOVERSION            ${SOVERSION}
   CLEAN_DIRECT_OUTPUT  1
   OUTPUT_NAME          "${PROJECT_NAME}_${LIB}")

generate_export_header(${PROJECT_NAME}_${LIB}
   EXPORT_FILE_NAME "${PROJECT_BINARY_DIR}/gcs_${LIB}_export.h")

TARGET_LINK_LIBRARIES(${PROJECT_NAME}_${LIB}
   ${PROJECT_NAME}_common
   Qt5::Gui)

INSTALL(TARGETS ${PROJECT_NAME}_${LIB}
   RUNTIME DESTINATION bin COMPONENT applications
   LIBRARY DESTINATION lib COMPONENT libraries
   ARCHIVE DESTINATION lib COMPONENT libraries)

SET(HDRS_INSTALL_FILES ${INCS} ${PROJECT_BINARY_DIR}/gcs_${LIB}_export.h)
INSTALL(FILES ${HDRS_INSTALL_FILES}
   DESTINATION include/${PROJECT_NAME}/${LIB}
   COMPONENT   headers)

SET(LIB_COMPONENTS   ${LIB_COMPONENTS} ${LIB})
SET(LIB_COMPONENTS   ${LIB_COMPONENTS} PARENT_SCOPE)
