GET_FILENAME_COMPONENT(LIB ${CMAKE_CURRENT_SOURCE_DIR} NAME_WE)

FILE(GLOB_RECURSE SRCS  "*.cpp")
FILE(GLOB_RECURSE HDRS  "*.h")
FILE(GLOB_RECURSE UIS   "*.ui")

QT5_WRAP_UI(UIS_H       ${UIS})
QT5_ADD_RESOURCES(RSC   ${PROJECT_SOURCE_DIR}/src/images.qrc)

ADD_LIBRARY(${PROJECT_NAME}_${LIB}  ${SRCS} ${HDRS} ${UIS_H} ${RSC})

SET_TARGET_PROPERTIES(${PROJECT_NAME}_${LIB} PROPERTIES
   VERSION              ${VERSION}
   SOVERSION            ${SOVERSION}
   CLEAN_DIRECT_OUTPUT  1
   OUTPUT_NAME          "${PROJECT_NAME}_${LIB}")

generate_export_header(${PROJECT_NAME}_${LIB}
   EXPORT_FILE_NAME "${PROJECT_BINARY_DIR}/gcs_${LIB}_export.h")

TARGET_LINK_LIBRARIES(${PROJECT_NAME}_${LIB}
   ${PROJECT_NAME}_common
   Qt5::Widgets
   Qt5::Network)

INSTALL(TARGETS ${PROJECT_NAME}_${LIB}
   RUNTIME DESTINATION bin COMPONENT applications
   LIBRARY DESTINATION lib COMPONENT libraries
   ARCHIVE DESTINATION lib COMPONENT libraries)

SET(LIB_COMPONENTS   ${LIB_COMPONENTS} ${LIB})
SET(LIB_COMPONENTS   ${LIB_COMPONENTS} PARENT_SCOPE)
